--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="/resources/index.css">
     </head>
     <body>
-        <h1>TuneFlow</h1>
+        <h1 class="title">TuneFlow</h1>
+        <input type="text" placeholder="Username">
+        <input type="password" placeholder="Password">
     </body>
 </html>
