--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <h1 class="title">TuneFlow</h1>
+        <!-- Just a way to log into an account that you have already created -->
         <input type="text" placeholder="Username">
+        <!-- Weird issue occurring here where when you type something the text is white -->
         <input type="password" placeholder="Password">
+        <!-- Adding a button to log into Spotify, not sure if this is required using the Spotify API -->
+         <button type="button" class="signUpButton">Sign in</button>
     </body>
 </html>
